<resources>
    <string name="app_name">Kerjain Duplicate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_task_list">Task List</string>
    <string name="done_button">SELESAI</string>
    <string name="deadline_dummy">Day, DD MMMM YYYY HH:MM</string>
    <string name="date_label">Tanggal</string>
    <string name="time_label">Jam</string>
    <string name="priority_label">Prioritas</string>
    <string name="save_button">Simpan</string>
    <string name="description_label">Deskripsi Tugas</string>
    <string name="topic_label">Topik</string>

    <string name="date">%s, %d %s %d</string>
    <string name="time">%02d:%02d</string>
    <string name="time_12_hour_format">%02d:%02d %s</string>
</resources>