<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextTopic"
        style="@style/edit_text_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:inputType="textCapSentences"
        android:hint="@string/topic_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelEditTextTopic" />

    <TextView
        android:id="@+id/labelEditTextTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/topic_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deadline_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:minWidth="130dp"
        style="@android:style/Widget.Holo.Spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelEditTextDeadline" />

    <TextView
        android:id="@+id/deadline_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/labelEditTextDeadline"
        app:layout_constraintLeft_toLeftOf="@+id/deadline_time" />

    <TextView
        android:id="@+id/deadline_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="125dp"
        style="@android:style/Widget.Holo.Spinner"
        app:layout_constraintBaseline_toBaselineOf="@+id/deadline_date"
        app:layout_constraintStart_toEndOf="@+id/deadline_date"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/labelEditTextDeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/date_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTopic" />

    <TextView
        android:id="@+id/labelPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/priority_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deadline_date" />

    <RadioGroup
        android:id="@+id/priority_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/rounded_corner_layout"
        android:backgroundTint="@color/text_container_kerjain"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelPriority">

        <RadioButton
            android:id="@+id/priority_radio_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:text="1" />

        <RadioButton
            android:id="@+id/priority_radio_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:text="2" />

        <RadioButton
            android:id="@+id/priority_radio_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3" />

    </RadioGroup>

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:ems="100"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:minHeight="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelEditTextDescription" />

    <TextView
        android:id="@+id/labelEditTextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/description_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priority_group" />

</androidx.constraintlayout.widget.ConstraintLayout>